--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:generate":"drizzle-kit generate:pg --schema db/schema.js --out ./drizzle",
+    "db:migrate":"npm tsx ./scripts/migrate.js",
+    "db:studio":"drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
     "@hono/clerk-auth": "^3.0.3",
+    "@neondatabase/serverless": "^0.9.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.30.10",
     "hono": "^4.11.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
@@ -25,6 +30,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.20.17",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
