--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "db:generate":"drizzle-kit generate:pg --schema db/schema.js --out ./drizzle",
-    "db:migrate":"npm tsx ./scripts/migrate.js",
-    "db:studio":"drizzle-kit studio"
+    "db:generate": "drizzle-kit generate:pg --schema db/schema.js --out ./drizzle",
+    "db:migrate": "node ./scripts/migrate.js",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
@@ -17,6 +17,7 @@
     "@neondatabase/serverless": "^0.9.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
+    "@tanstack/react-query": "^5.90.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
@@ -34,6 +35,7 @@
     "drizzle-kit": "^0.20.17",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "pg": "^8.16.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
   }
