--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@clerk/nextjs": "^6.36.5",
     "@hono/clerk-auth": "^3.0.3",
     "@neondatabase/serverless": "^0.9.1",
+    "@paralleldrive/cuid2": "^3.0.6",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.90.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
+    "drizzle-zod": "^0.5.1",
     "hono": "^4.11.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
