--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^0.9.1",
     "@paralleldrive/cuid2": "^3.0.6",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
