--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
+    "react-select": "^5.10.2",
     "react-use": "^17.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
