--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
+    "react-countup": "^6.5.3",
     "react-currency-input-field": "^4.0.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
+    "react-icons": "^5.5.0",
     "react-papaparse": "^4.4.0",
     "react-select": "^5.10.2",
     "react-use": "^17.6.0",
