--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
+    "query-string": "^9.3.1",
     "react": "19.2.3",
     "react-countup": "^6.5.3",
     "react-currency-input-field": "^4.0.3",
